<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECoS Controller</string>
    <string name="btn_control">Connect</string>
    <string name="btn_light">Light</string>
    <string name="btn_f">F</string>
    <string name="tv_state">Console:</string>
    <string name="tv_take">Control</string>
    <string name="tv_name">Name:</string>
    <string name="tv_idd">Id:</string>
    <string name="tv_address">Address:</string>
    <string name="tv_speed">Speed:</string>
    <string name="btn_about">About</string>
    <string name="btn_settings">Settings</string>
    <string name="cb_reverse">Reverse</string>
    <string name="tv_connect">Connected</string>
    <string name="tv_disconnect">Not connected</string>
    <string name="tv_ip">IP</string>
    <string name="tv_port">Port (15471)</string>
    <string name="tv_id_available">Trains:</string>
    <string name="btn_emergency">Emergency</string>
    <string name="tv_f8_f15">F8...F15</string>
    <string name="tv_f16_f23">F16...F23</string>
    <string name="btn_pack">Buy Unlock</string>
    <string name="btn_edit">Edit</string>
    <string name="tv_save">Save</string>
    <string name="tv_cancel">Cancel</string>
    <string name="btn_contact">Contact</string>
    <string name="tv_network">Network</string>
    <string name="tv_console">Settings</string>
    <string name="btn_info">Console Info</string>
    <string name="tv_protocol_version">Protocol:&#160;</string>
    <string name="tv_application_version">Application:&#160;</string>
    <string name="tv_hardware_version">Hardware:&#160;</string>
    <string name="tv_ecos_version">ECoS Controller:&#160;</string>
    <string name="tv_switch">Switching objects</string>
    <string name="state_console_info">Get Console info</string>
    <string name="state_train_list">Get Trains list</string>
    <string name="state_train_state">Get Train state</string>
    <string name="state_train_buttons">Get Train buttons state</string>
    <string name="state_f8_f15">Get F8-F15 buttons state</string>
    <string name="state_f16_f23">Get F16-F23 buttons state</string>
    <string name="state_switching_objects">Get Switching Objets state</string>
    <string name="state_ready">Ready</string>
    <string name="pref_sort_sum">Sorting the list by ID instead of name</string>
    <string name="pref_sort_title">Sorting by ID</string>
    <string name="pref_speed_step_title">Speed step</string>
    <string name="pref_speed_step_sum">Speed step for volume button</string>
    <string name="btn_name">Name</string>
    <string name="btn_type">Type</string>
    <string name="pref_locodesc_title">Show trains symbol</string>
    <string name="pref_locodesc_sum">Show trains symbol (can be slow)</string>
    <string name="pref_lockrotation_title">Disable screen rotation</string>
    <string name="pref_lockrotation_sum">Disable screen rotation</string>

</resources>